--- a/SalesPage.html
+++ b/SalesPage.html
@@ -18,7 +18,7 @@
   </ul>
 </div>
 
-<div class="our-content"><h1>How to Build a Phone Flipping busines from Scratch and Land Your First flip <em id="Color">Today!..</em></h1>
+<div class="our-content"><h1>to Build a Phone Flipping busines from Scratch and Land Your First flip <em id="Color">Today!..</em></h1>
 
 <!--<ul>
   <li>What if you could look at a <strong>Blank Page</strong>. and know exactly what to do with it</li>
